--- a/webapi/breezeGridExample/Views/Shared/breezePagedGrid.cshtml
+++ b/webapi/breezeGridExample/Views/Shared/breezePagedGrid.cshtml
@@ -58,3 +58,6 @@
 <script type="text/html" id="id-nav-link">
 <span><a data-bind="text: $parent.getProperty(FieldName()), attr: { href: NavLink() + '/' + $parent.getProperty(KeyField()) }"></a></span>
 </script>
+<script type="text/html" id="html">
+<span><a data-bind="html: $parent.getProperty(FieldName()), attr: { href: NavLink() + '/' + $parent.getProperty(KeyField()) }"></a></span>
+</script>
